# trp-day0-3day-challenge

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  technical_report.md
.github/workflows/: main.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
docs/: Project_Chimera_3Day_Challenge.md
ide-chat-history/: cursor_project_chimera_challenge_implem.md
research/: architecture_strategy.md  tooling_strategy.md
skills/: README.md  __init__.py
skills/skill_download_youtube/: README.md  __init__.py  download.py
skills/skill_transcribe_audio/: README.md  __init__.py  transcribe.py
skills/skill_trend_fetcher/: README.md  __init__.py  trend_fetcher.py
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
specs/001-trend-fetch-mcp/: spec.md
specs/002-planner-task-queue/: spec.md
specs/003-judge-review-queue/: spec.md
specs/004-hitl-queue-dashboard/: spec.md
specs/005-worker-task-queue/: spec.md
specs/006-schema-campaigns-assets/: spec.md
specs/007-persona-soul-context/: spec.md
specs/008-openclaw-agent-status/: spec.md
specs/main/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
src/cli/: __init__.py
src/lib/: __init__.py  config.py  queue_client.py
src/models/: __init__.py  task.py  trend.py  worker_result.py
src/services/: __init__.py  trend_fetcher.py
tests/: __init__.py  test_skills_interface.py  test_trend_fetcher.py
tests/contract/: __init__.py  test_task_payload.py  (+1 more)
(+14 files in other folders)
