[project]
name = "project-chimera"
version = "0.1.0"
description = "Project Chimera — Autonomous Influencer Network (Planner–Worker–Judge, MCP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "redis>=5.0",
    "mcp>=1.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["skills"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
